traffic-mgmt/server/server-api-v2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-api-v2
spec:
  replicas: 2
  selector:
    matchLabels:
      app: server-api
      version: v2
  template:
    metadata:
      labels:
        app: server-api
        version: v2
    spec:
      containers:
      - name: server-api
        image: damadei/server-api:v1
        imagePullPolicy: Always
        ports:
          - containerPort: 8181
            name: server-api-port
        readinessProbe:
          httpGet:
            path: /
            port: server-api-port
          initialDelaySeconds: 5
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: server-api-port
          initialDelaySeconds: 5
          periodSeconds: 5
