traffic-mgmt/server/virtual-server-server-api.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: server-api
spec:
  hosts:
    - server-api
  http:
  - route:
    - destination:
        host: server-api
        subset: v2
      weight: 10
    - destination:
        host: server-api
        subset: v1
      weight: 90
